--- a/src/pokedex/pokedex.css
+++ b/src/pokedex/pokedex.css
@@ -16,6 +16,10 @@
     padding: 10px;
 }
 
+.pokeList:hover {
+    transform: scale(1.1);
+}
+
 .pokeImage {
     width: 100%;
     max-width: 200px;
@@ -138,4 +142,11 @@
 }
 .option:hover {
     box-shadow: 0 0 10px 100px #313131 inset
+}
+
+.loadImg2 {
+    width: 100%;
+    max-width: 256px;
+    height: 256px;
+    margin: 0 350px;
 }
