--- a/src/pokedex/pokemon.css
+++ b/src/pokedex/pokemon.css
@@ -48,11 +48,9 @@
     margin-top: 30px;
 }
 
-.loading {
+.loadImg {
     width: 100%;
-    max-width: 400px;
-    margin: 200px auto;
-    font-weight: bold;
-    font-size: 50px;
-    color: #61617A;
+    max-width: 256px;
+    height: 256px;
+    margin: 0 550px;
 }
